--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,7 @@ beautifulsoup4
 opencc-python-reimplemented
 pandas
 # model
-# KeyBERT
-# hdbscan
+matplotlib
 datasets
 --index-url https://pypi.org/simple
 --extra-index-url https://download.pytorch.org/whl/cu128
@@ -19,5 +18,6 @@ torch
 torchvision
 torchaudio
 transformers[torch]
-# -f https://download.pytorch.org/whl/cu128
 sentence-transformers
+# KeyBERT
+# hdbscan
