--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,17 @@ jieba
 beautifulsoup4
 opencc-python-reimplemented
 pandas
+contractions
 # model
 matplotlib
 datasets
 --index-url https://pypi.org/simple
---extra-index-url https://download.pytorch.org/whl/cu128
+--extra-index-url https://download.pytorch.org/whl/cu126
 torch
 torchvision
 torchaudio
 transformers[torch]
 sentence-transformers
-# KeyBERT
-# hdbscan
+KeyBERT
+hdbscan
+tqdm
